--- a/app/scss/base.scss
+++ b/app/scss/base.scss
@@ -3,6 +3,6 @@ p{
     span{
        height:23px;
        text-align-last:12px;
-       transform:rotate(30deg);
+       transform:rotate(30deg)
     }
 }
